# backup_d

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile_s  README.md  backup.sln  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.1  traces.0  traces.1
backup/: Makefile  Makefile.am  Makefile.in  Makefile_d  Makefile_s  Makefile_test  backup.cpp  backup.vcproj  backup_master.cpp  backup_task.cpp  backup_worker.cpp  bk_basic.vcproj  config.cpp  db_exec.cpp  disk_container.cpp  file_frame.cpp  main.cpp  main_msg.cpp  main_test_master.cpp  main_thread.cpp  msg_queue.cpp  sys_thread.cpp  task_t.cpp  test_backup_db.cpp  test_main_backup.cpp  test_task_control.cpp  thread_pool.cpp
backup/log/: error_20120920-155414.1036  info_20120920-155446.2420  info_20120920-160838.3080  info_20120920-161356.2948
backup_ui/: Makefile  Makefile.am  Makefile.in  Makefile_bak  Makefile_d  Makefile_s  backup_main.cpp  backup_main.h  backup_status.cpp  backup_status.h  backup_ui.cbp  backup_ui.depend  backup_ui.layout  backupclient.cpp  brick_group.cpp  brick_group.h  deamon.cpp  deamon.h  main.cpp
backup_ui_w/: backup_main.cpp  backup_main.h  backup_ui.cbp  backup_ui.depend  backup_ui.layout  brick_group.cpp  brick_group.h  main.cpp
backupadmin/: BrickMaster.cpp  BrickMaster.h  BrowseFolder.cpp  BrowseFolder.h  Makefile  Makefile.am  Makefile.in  Makefile_d  Makefile_s  NASMaster.cpp  NASMaster.h  QueryFrame.cpp  QueryFrame.h  backupadmin.cbp  backupadmin.depend  backupadmin.layout  db_config.cpp  db_config.h  main.cpp  masterwin.cpp  masterwin.h
bk_console/: Makefile  bk_console.vcproj  main.cpp
config/: backup_config
db_access/: Makefile  Makefile.am  Makefile.in  Makefile_d  Makefile_s  ReadMe.txt  db_access.vcproj  mysqlplus.cpp
format_src/: compile_formate  format_src.vcproj  main  main.cpp
include/: arg_parser.h  backup.h  backup_master.h  backup_msg.h  backup_task.h  backup_worker.h  com_inc.h  config.h  db_exec.h  disk_container.h  file_frame.h  lock.h  lock_t.h  msg_queue.h  mysqlplus.h  sys_config.h  sys_define.h  sys_mutex.h  sys_thread.h  sysinfod.h  systools.h  task_t.h  thread_pool.h  vector.h
lib/: db_access.lib  libglog_static.lib  syslayer.lib
lib/Debug/: bk_basic.lib  db_access.lib  libglog.lib  libglog_static.lib  syslayer.lib  systools.lib
log/glog-0.3.2/glog-0.3.2/Release/: libglog.exp
log/glog-0.3.2/lib/: libglog.lib
log/glog-0.3.2/lib/Debug/: libglog.exp
log/glog_project/: glog_project.sln
log/glog_project/1/: 1.vcproj  main.cpp
log/glog_project/glog_project/: glog_project.vcproj  main.cpp
sql/: TEST_DATA.txt  backup.sql
sql_wrapper/: L_tools.h  Makefile  main.cpp  mysqlplus.cpp  mysqlplus.h  sql_wrapper.vcproj  vector.h
syslayer/: Makefile  Makefile.am  Makefile_d  Partition_path.txt  ReadMe.txt  lsiutil.x86_64  mount_t3.c  sas_address.cpp  sysinfod.cpp  test.cpp  test_syslayer.vcproj  udevadm2.c  udevadm3.c
syslayer_ori/: Makefile.am  Makefile.in  Makefile_d  Makefile_s  cmd  del_line.cpp  disk_id.txt  mount_t3.c  mount_umount.cpp  out.txt  sas_address.cpp  sysinfod.cpp  syslayer.vcproj  test.cpp  udevadm2.c  udevadm3.c
systools/: Makefile  Makefile.am  Makefile.in  Makefile_d  Makefile_s  ReadMe.txt  arg_parser.cpp  lock.cpp  sys_mutex.cpp  systools.cpp  systools.vcproj
systools/.deps/: libsystools_a-systools.Tpo
test/: backup_config  demo_glog.cpp  disk_space.cpp  get_config.cpp  pure-specifier.cpp  refrence_pass.cpp  search_folder.cpp  stat64.cpp
test/test_db_access/: Makefile  main.cpp  test_db_access.vcproj
